--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://consensys.github.io/linnia-faucet/",
   "dependencies": {
     "@linniaprotocol/linnia-july-2018": "^0.1.7",
+    "@material-ui/core": "^1.4.1",
     "eth-lib": "https://github.com/alan2207/eth-lib",
     "ethereumjs-wallet": "^0.6.1",
     "gh-pages": "^1.2.0",
