--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "dependencies": {
     "@linniaprotocol/linnia-july-2018": "^0.1.7",
     "@material-ui/core": "^1.4.1",
+    "@material-ui/icons": "^2.0.3",
+    "axios": "^0.18.0",
+    "classnames": "^2.2.6",
+    "css-loader": "^1.0.0",
     "ethereumjs-wallet": "^0.6.1",
     "gh-pages": "^1.2.0",
     "history": "^4.7.2",
     "ipfs-mini": "^1.1.2",
+    "linnia-brand": "^1.0.16",
     "metamask-logo": "^2.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-image": "^1.4.1",
     "react-redux": "^5.0.7",
     "react-router": "^3.2.1",
     "react-router-dom": "^4.3.1",
