--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "react-router": "^3.2.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.0.0",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "webpack": "^3.11.0"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +36,11 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
