--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stow-faucet",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://faucet.stow-protocol.com",
+  "homepage": "https://faucet.ropsten.stow-protocol.com",
   "dependencies": {
     "@material-ui/core": "^1.4.1",
     "@material-ui/icons": "^2.0.3",
@@ -27,8 +27,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "^2.0.0",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "web3": "^1.0.0-beta.36"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
